avoid overlap in itinerary time estimation text

--- a/app/component/itinerary/itinerary.scss
+++ b/app/component/itinerary/itinerary.scss
@@ -2527,6 +2527,8 @@ $itinerary-tab-switch-height: 48px;
   .itinerary-time-column {
     @include font-medium;
 
+    direction: rtl;
+
     .itinerary-time-column-time {
       font-size: 0.9375rem;
     }
